--- a/M6_Starter_Code 2/example.env
+++ b/M6_Starter_Code 2/example.env
@@ -1,2 +1,2 @@
-NYT_API_KEY="ENTER YOUR KEY HERE"
-TMDB_API_KEY="ENTER YOUR KEY HERE"
+NYT_API_KEY="IU7BgIL4ZZCKihVAAuBkwsWC5gEipeyy"
+TMDB_API_KEY="2c2c7ee064f19d29854f93a3629f3fc6"
